--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-yu-gi-oh",
+  "name": "vite-boolflix",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bootstrap": "^3.4.1",
     "vue": "^3.3.11"
   },
   "devDependencies": {
